# vite-react-dapp-template

./: .dockerignore  .env  .env.development  .env.example  .env.production  .env.template  .eslintrc.cjs  .gitignore  .mcp.json  .prettierrc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  auth-restructure-plan.md  env.example  eslint.config.mjs  features.md  i18next-parser.config.json  index.html  nginx.conf.sample  package-lock.json  package.json  postcss.config.cjs  pull_request_template.md  tsconfig.json  tsconfig.node.json  update-imports.mjs  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.husky/: pre-commit
.storybook/: i18n.ts  main.ts  preview.ts  preview.tsx
dev/backend/ai-agent-google-adk/: .env.template  README.md  config.py  main.py  pyproject.toml
dev/backend/ai-agent-google-adk/agent/: agent.py  subagents.py
dev/backend/ai-agent-google-adk/api/: routes.py
dev/backend/ai-agent-langgraph/: .env.template  config.py  pyproject.toml
dev/backend/ai-agent-langgraph/agent/: nodes.py  subagent.py
dev/backend/ai-agent-langgraph/api/: routes.py
issues/: 00-refactoring-master-plan.md  issue-63-plan.md  refactor-auth-feature-injection.md  refactor-blog-demo-feature-injection.md  refactor-chat-feature-injection.md  refactor-wallet-feature-injection.md
public/: manifest.json  serve.json
scripts/: bump-version.cjs  check-translations.cjs  delete-blog-demo.md  delete-chat.md  delete-oauth.md  delete-wallet.md
src/: App.tsx  index.css  jest.setup.ts  main.tsx  setupTests.ts  vite-env.d.ts
(+1186 files in other folders)
