[project]
name = "ai-agent-google-adk"
version = "0.1.0"
description = "Google ADK-based chat agent backend for vite-react-dapp-template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "google-adk>=1.16.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]
